--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v2
       with:
+        terraform_directory: terraform
         terraform_version: 1.5.6
 
     - name: Log in to Azure
