--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -25,13 +25,17 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Initialize Terraform
+      working-directory: terraform
       run: terraform init
 
     - name: Validate Terraform
+      working-directory: terraform
       run: terraform validate
 
     - name: Plan Terraform
+      working-directory: terraform
       run: terraform plan
 
     - name: Apply Terraform
+      working-directory: terraform
       run: terraform apply -auto-approve
