--- a/.github/workflows/deploy-base.yml
+++ b/.github/workflows/deploy-base.yml
@@ -38,7 +38,7 @@ jobs:
         STORAGE_ACCOUNT_NAME="tfstatefile${{ vars.RG_LOCATION }}${{ inputs.environment }}"
         CONTAINER_NAME="tfstate"
         RG_SKU_VAR="RG_SKU_${{ inputs.environment }}"
-        RG_SKU=${{ vars[RG_SKU_VAR] }}
+        RG_SKU=${{ vars[$RG_SKU_VAR] }}
 
         az group create --name $RESOURCE_GROUP_NAME --location ${{ vars.RG_LOCATION }}
         az storage account create \
