--- a/.github/workflows/deploy-base.yml
+++ b/.github/workflows/deploy-base.yml
@@ -29,9 +29,9 @@ jobs:
     - name: Log in to Azure
       uses: azure/login@v1
       with:
-        client-id: ${{ vars.AZURE_CLIENT_ID }}
-        tenant-id: ${{ vars.AZURE_TENANT_ID }}
-        subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
+        client-id: ${{ vars.ARM_CLIENT_ID }}
+        tenant-id: ${{ vars.ARM_TENANT_ID }}
+        subscription-id: ${{ vars.ARM_SUBSCRIPTION_ID }}
     
     - name: Set up Terraform backend
       run: |
@@ -56,10 +56,10 @@ jobs:
     - name: Initialize Terraform
       working-directory: terraform
       env:
-        ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-        ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ vars.ARM_SUBSCRIPTION_ID }}
+        ARM_CLIENT_ID: ${{ vars.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ vars.ARM_CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
+        ARM_TENANT_ID: ${{ vars.ARM_TENANT_ID }}
         STORAGE_ACCOUNT_NAME: ${{ env.STORAGE_ACCOUNT_NAME }}
         CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
       run: terraform init
@@ -71,10 +71,10 @@ jobs:
     - name: Plan Terraform
       working-directory: terraform
       env:
-        ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-        ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ vars.ARM_SUBSCRIPTION_ID }}
+        ARM_CLIENT_ID: ${{ vars.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ vars.ARM_CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
+        ARM_TENANT_ID: ${{ vars.ARM_TENANT_ID }}
         STORAGE_ACCOUNT_NAME: ${{ env.STORAGE_ACCOUNT_NAME }}
         CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
       run: terraform plan
@@ -83,10 +83,10 @@ jobs:
       if: ${{ github.event.inputs.apply == 'true' }}
       working-directory: terraform
       env:
-        ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-        ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ vars.ARM_SUBSCRIPTION_ID }}
+        ARM_CLIENT_ID: ${{ vars.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ vars.ARM_CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
+        ARM_TENANT_ID: ${{ vars.ARM_TENANT_ID }}
         STORAGE_ACCOUNT_NAME: ${{ env.STORAGE_ACCOUNT_NAME }}
         CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
       run: terraform apply -auto-approve
