--- a/.github/workflows/deploy-base.yml
+++ b/.github/workflows/deploy-base.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         client-id: ${{ vars.ARM_CLIENT_ID }}
         tenant-id: ${{ vars.ARM_TENANT_ID }}
-        subscription-id: ${{ vars.TF_VAR_SUBSCRIPTION_ID }}
+        subscription-id: ${{ vars.ARM_SUBSCRIPTION_ID }}
     
     - name: Set up Terraform backend
       run: |
@@ -59,7 +59,7 @@ jobs:
     - name: Initialize Terraform
       working-directory: terraform
       env:
-        ARM_SUBSCRIPTION_ID: ${{ vars.TF_VAR_SUBSCRIPTION_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ vars.ARM_SUBSCRIPTION_ID }}
         ARM_CLIENT_ID: ${{ vars.ARM_CLIENT_ID }}
         ARM_TENANT_ID: ${{ vars.ARM_TENANT_ID }}
         ARM_USE_OIDC: true
@@ -87,7 +87,7 @@ jobs:
     #   if: ${{ github.event.inputs.apply == 'true' }}
     #   working-directory: terraform
     #   env:
-    #     ARM_SUBSCRIPTION_ID: ${{ vars.TF_VAR_SUBSCRIPTION_ID }}
+    #     ARM_SUBSCRIPTION_ID: ${{ vars.ARM_SUBSCRIPTION_ID }}
     #     ARM_CLIENT_ID: ${{ vars.ARM_CLIENT_ID }}
     #     ARM_CLIENT_SECRET: ${{ vars.ARM_CLIENT_SECRET }}
     #     ARM_TENANT_ID: ${{ vars.ARM_TENANT_ID }}
